# alex-der

./: .gitignore  alex-der  install.sh  main.py  pyproject.toml
alex_der/: __init__.py  ai.py  cli.py  config.py  conversation.py  loader.py  selector.py  tools.py
